# CSCI2952n-FinalProject

./: .gitignore  README.md  pyproject.toml
miniproject/: Mini Project 1.ipynb
notebooks/: Connecting GroundingDINO and SAM.ipynb  Mini Project 1.ipynb  gd.py  gd_sam.py  paths.py  plotting.py  sam.py
