[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "ruff>=0.0.261",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Paul Xu", email = "yang_xu@brown.edu"},
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.1",
    "jupyterlab>=3.6.3",
    "scikit-learn>=1.2.2",
    "ftfy>=6.1.1",
    "regex>=2023.3.23",
    "tqdm>=4.65.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "matplotlib>=3.7.1",
    "openai>=0.27.4",
    "setuptools>=67.6.1",
    "notebook>=6.5.4",
    "ipykernel>=6.22.0",
    "jupyter>=1.0.0",
    "opencv-python>=4.7.0.72",
    "roboflow>=1.0.5",
    "supervision>=0.6.0",
    "transformers>=4.28.1",
    "pip>=23.1.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend", "torch"]
build-backend = "pdm.backend"
